--- a/FlightCast/templates/airportdata.html
+++ b/FlightCast/templates/airportdata.html
@@ -26,7 +26,7 @@
                       <ul class="nav navbar-nav">
                         <li><a href="/">Home</a></li>
                         <li><a href="/flightsearch">Flight Search</a></li>
-                        <li><a href="/airportdata">Data</a></li>
+                        <li class="active"><a href="/airportdata">Data</a></li>
                       </ul>
                       <ul class="nav navbar-nav navbar-right">
                       <li><a href="#"><span class="glyphicon glyphicon-user"></span> About Us</a></li>
@@ -36,25 +36,6 @@
                 
                 
             </div>
-            <div id="map"></div>
-
-
-            <p id="waypoints"></p>
-
-            <script type="text/javascript">
-                var waypoints = '{{ waypointsdata | tojson | safe }}';
-                
-                obj = JSON.parse(waypoints);
-             
-                document.getElementById("waypoints").innerHTML = obj[1].latitude + " " + obj[1].longitude;
-
-            </script>
-
-            <!-- API key -->
-            <script type="text/javascript" src="/static/scripts/config.js"></script>
-            <!-- JS -->
-            <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-            <script type="text/javascript" src="/static/scripts/AnimatedMarker.js"></script>
-            <script type="text/javascript" src="/static/scripts/flightmap.js" ></script>
+            
     </body>
 </html>
