--- a/FlightCast/templates/airportdata.html
+++ b/FlightCast/templates/airportdata.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Flight Mapping</title>
+        <title>Airport Data</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"/>
         <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.5.0/d3.min.js"></script>
         <link rel="stylesheet" type="text/css" href="/static/styles/style.css">
         <link rel="stylesheet" type="text/css" href="/static/styles/style1.css">
         <script type="text/javascript">
@@ -32,10 +33,25 @@
                       <li><a href="#"><span class="glyphicon glyphicon-user"></span> About Us</a></li>
                     </div>
                   </nav>
-            <div class="container">
-                
-                
+            <div class="container" style="padding-top:65px;">
+                    <div class="row">
+                            <div class="col-md-12">
+                                <table class="table table-striped">
+                                    <thead>
+                                        <tr><th>Airport ID</th><th>Name</th><th>City</th><th>Country</th><th>IATA</th><th>ICAO</th></tr>
+                                    </thead>
+                                    <tbody></tbody>
+                                </table>
+                            </div>
+                        </div>
             </div>
             
+            
+
+            <script type="text/javascript">
+                var airportdata = '{{ airportdata | tojson | safe }}';
+                obj = JSON.parse(airportdata);
+            </script>
+            <script src="/static/scripts/airportdata.js"></script>
     </body>
 </html>
