--- a/FlightCast/static/styles/style1.css
+++ b/FlightCast/static/styles/style1.css
@@ -4,6 +4,7 @@ body {
   background-size: cover;
   background-color: transparent;
   background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 
