--- a/FlightCast/templates/airportdata.html
+++ b/FlightCast/templates/airportdata.html
@@ -36,7 +36,7 @@
             <div class="container" style="padding-top:65px;">
                     <div class="row">
                             <div class="col-md-12">
-                                <table class="table table-striped">
+                                <table style="background-color: #ffffff;" class="table table-hover table-striped">
                                     <thead>
                                         <tr><th>Airport ID</th><th>Name</th><th>City</th><th>Country</th><th>IATA</th><th>ICAO</th></tr>
                                     </thead>
