--- a/style.css
+++ b/style.css
@@ -4,24 +4,42 @@ body {
   background-size: cover;
   background-color: transparent;
   background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
-
-
-/* button {
-  background-color: dodgerblue;
-  border: none;
-  color: black;
-  padding: 15px 25px;
-  font-size: 20px;
-  cursor: pointer;
-  display: flex;
-} */
-
-.airplane-flex-container {
-  display: flex;
+.font-header {
+  font-family: impact,"fantasy";
   
 }
+
+.begin-font{
+  font-size: 18px;
+}
+
+
+p {
+  line-height: 1.8;
+  font-size: 18;
+  text-align: justify;
+}
+
+input.submit-Button {
+  width: 200px;
+  padding: 20px;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 150%;
+  background:rgb(176,214,242);
+  color: rgb(3,69,117);
+  border: 1px solid rgb(176,214,242);
+  border-radius: 10px;
+  }
+
+  input.submit-Button:hover {
+  color: #ffff00;
+  background: #000;
+  border: 1px solid #fff;
+  }
 
 .airplane-flex-container div{
   /* border: 1px #ccc solid; */
@@ -30,25 +48,59 @@ body {
   justify-content: space-between;
   align-content:center ;
 }
-.airplane-box-1{
-  flex: 4;
 
-}
+  
 
-.airplane-box-2{
-  flex: 6;
-}
 
-.flight-flex-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: flex-start;
-}
+  *{
+    box-sizing: border-box;
+  }
+  
+  body {
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  
+  /* Float four columns side by side */
+  .column {
+    float: left;
+    width: 50%;
+    padding: 0 5px;
+  }
+  
+  .row {margin: 0 -5px;}
+  
+  /* Clear floats after the columns */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+  /* Responsive columns */
+  @media screen and (max-width: 600px) {
+    .column {
+      width: 100%;
+      display: block;
+      margin-bottom: 10px;
+    }
+  }
+  
+  /* Style the counter cards */
+  .card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    padding: 16px;
+    text-align: center;
+    background-color: rgb(176,214,242);
+    color: rgb(3,69,117);
+  }
+  
+  .fa {font-size:50px;}
+
+
 
 .flight-flex-container div{
  
-  margin-top: 50px;
+  margin-top: 100px;
   justify-content: center;
   align-content:flex-start ;
 }
