--- a/FlightCast/templates/flightmap.html
+++ b/FlightCast/templates/flightmap.html
@@ -32,10 +32,7 @@
                       <li><a href="#"><span class="glyphicon glyphicon-user"></span> About Us</a></li>
                     </div>
                   </nav>
-            <div class="container" style="padding-top:65px;">
-                    
-                
-            </div>
+            <div class="navpadding">&nbsp;</div>
             <div id="map"></div>
 
 
