--- a/FlightCast/templates/aboutus.html
+++ b/FlightCast/templates/aboutus.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Fly with Me</title>
+    <title>Flight About Us</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/styles/style.css">
@@ -36,52 +36,40 @@
         </a>
       </div>
       <ul class="nav navbar-nav">
-        <li class="active"><a href="/">Home</a></li>
+        <li><a href="/">Home</a></li>
         <li><a href="/flightsearch">Flight Search</a></li>
         <li><a href="/airportdata">Data</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-      <li><a href="/aboutus"><span class="glyphicon glyphicon-user"></span> About Us</a></li>
+      <li class="active"><a href="/aboutus"><span class="glyphicon glyphicon-user"></span> About Us</a></li>
     </div>
   </nav>
 
   <div class="airplane-flex-container">
     <div class="airplane-box-1">
-      <h1>Welcome to Flightcast</h1><br>
-      <p class= "begin-font"> Flightcast is your optimal place to obtain data on any airline or flight. It is a one stop location comparison site for you to determine which airline would have you to your final destination in the optimal time and with minimal delays. </p>
-
-      <p class="begin-font"> We have pulled API data from AllAirports JSON into a sqlite database to populate a table of all airport origins and destinations within the United States.</p><br>
       
-      
-    
-    <form>
-       <input class="submit-Button" type="button" value="Flight Search" onclick="window.location.href='https//:flightsearch.html'" />
-    </form>
-    
+    <h1>FlightCast Team</h1>
+    <h4>Trevor Bowens</h4>
+    <h4>Angel Cahill</h4>
+    <h4>Dimpal Gajjar</h4>
+    <h4>T.J. Zientek</h4>
+<br><br>
+    <h1>Technologies Used</h1>
+        Python<br>
+        Html<br>
+        CSS3<br>
+        D3<br>
+        leaflet<br>
+        Mapbox<br>
+        Flask<br>
 
-    </div><br><br>
-
-    <div class="row">
-  <div class="column">
-    <div class="card">
-    <img src="/static/images/flight.jpg" alt="flight">
-      <h2 class="font-header"> FIND YOUR ROUTE</h2><br>
-        <p> Choose your origin and destination</p><br>
-        <p> Select your optimal date for travel</p><br>
-        <p> HIT THE FLY AWAY BUTTON </p> 
     </div>
-  </div>
+  
 
-  <div class="column">
-    <div class="card">
-     <img src="/static/images/worldsearch.png" alt="worldsearch">
-      <h2 class="font-header">SEARCH</h2><br>
-          
-        <p> shortest flight path</p>
-        <p> graphical data</p>
-        <p> on-time performance</p>
-        <p> determine which fpght is best for you</p>
-          
+ 
+    <div class="airplane-box-2">
+      
+        
     </div>
   </div>  
     
