--- a/FlightCast/templates/airportdata.html
+++ b/FlightCast/templates/airportdata.html
@@ -30,10 +30,12 @@
                         <li class="active"><a href="/airportdata">Data</a></li>
                       </ul>
                       <ul class="nav navbar-nav navbar-right">
-                      <li><a href="#"><span class="glyphicon glyphicon-user"></span> About Us</a></li>
+                      <li><a href="/aboutus"><span class="glyphicon glyphicon-user"></span> About Us</a></li>
                     </div>
                   </nav>
-            <div class="container" style="padding-top:65px;">
+            <div class="navpadding">&nbsp;</div>
+            <div class="container">
+                    <h1>Airport Data</h1>
                     <div class="row">
                             <div class="col-md-12">
                                 <table style="background-color: #ffffff;" class="table table-hover table-striped">
