--- a/FlightCast/templates/flightsearch.html
+++ b/FlightCast/templates/flightsearch.html
@@ -5,7 +5,7 @@
     <title>Flight Search</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="/static/styles/style1.css">
+    <link rel="stylesheet" href="/static/styles/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script type="text/javascript">
@@ -43,36 +43,46 @@
         <li><a href="/airportdata">Data</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-      <li><a href="#"><span class="glyphicon glyphicon-user"></span> About Us</a></li>
+      <li><a href="/aboutus"><span class="glyphicon glyphicon-user"></span> About Us</a></li>
     </div>
   </nav>
-  <div class="flight-flex-container">
-    <div class = "flight-box-1">
-    <form>
-      <div class="input-group">
-        <input id="origin" type="text" class="form-control" name="Origin" placeholder="Origin">
+  <div class="navpadding">&nbsp;</div>
+  <div class="container-fluid-body">
+    <div class="row">
+      <div class="col-sm-3 col-md-6 col-lg-4 bg-success">
+      <form action="/action_page.php">
+        <div class="form-group">
+          <label for="origin">Origin</label>
+          <input type="text" class="form-control" id="origin" name="origin">
+        </div>
+        <div class="form-group">
+          <label for="des">Destination</label>
+          <input type="destination" class="form-control" id="des" name="destination">
+        </div>
+        <div class="form-group">
+            <div>
+                <span class="glyphicon glyphicon-calendar"></span> Calendar
+                  <input id="date" type="date" class="form-control" name="Date" placeholder="Date" name="trip"
+                             value="2018-07-22"
+                             min="2018-01-01" max="2018-12-31" />
+                  </div>
+        </div>
+        <button type="submit" class="btn btn-primary">FLY AWAY</button>
+      </form>  
       </div>
-      
-      <div class="input-group">
-          <input id="destination" type="text" class="form-control" name="Destination" placeholder="Destination">
+      <div class="col-sm-9 col-md-6 col-lg-8">
+        <table style="background-color: #ffffff;" class="table table-hover table-striped">
+          <thead>
+              <tr><th>Flight Number</th><th>Aircraft</th><th>Origin City</th><th>Destination City</th><th>Est Departure</th><th>Est Arrival</th><th></th></tr>
+          </thead>
+          <tbody></tbody>
+        </table>
       </div>
-      
-      <div class="input-group">
-        <span class="glyphicon glyphicon-calendar"></span> Calendar
-          <input id="date" type="text" class="form-control" name="Date" placeholder="Date">
-      </div>
-  </form>
-
-    <div class = "flight-box-2">
-    
-      <table style="background-color: #ffffff;" class="table table-hover table-striped">
-        <thead>
-            <tr><th>Flight Number</th><th>Aircraft</th><th>Origin City</th><th>Destination City</th><th>Est Departure</th><th>Est Arrival</th><th></th></tr>
-        </thead>
-        <tbody></tbody>
-      </table>
     </div>
   </div>
+    
+      
+   
     <script type="text/javascript">
         var flightdata = '{{ flightdata | tojson | safe }}';
         obj = JSON.parse(flightdata);
