--- a/style.css
+++ b/style.css
@@ -102,3 +102,99 @@ label {
     text-align: right;
     width: 20%;
 }
+
+
+.card {
+    box-shadow: 2 8px 15px 2 rgba(96, 154, 207, 0.2);
+    max-width: 300px;
+    margin: auto;
+    text-align: center;
+}
+
+.title {
+    color: WHite;
+    font-size: 18px;
+}
+
+button {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 8px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+    font-size: 18px;
+}
+
+a {
+    text-decoration: none;
+    font-size: 22px;
+    color: black;
+}
+
+button:hover, a:hover {
+    opacity: 0.7;
+}
+
+
+/*.chip {
+    margin-top: -25px;
+    display: inline-block;
+    padding: 50px;
+    height: 400px;
+    font-size: 25px;
+    line-height: 50px;
+    border-radius: 25px;
+    background-color: #d4e7f3;
+    column-count: 3;
+    column-gap: 100px;
+
+}
+
+.chip img {
+    float: center;
+    margin: 0 40px 0 10px;
+    height: 75px;
+    width: 75px;
+    border-radius: 50%;
+}
+*/body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Float four columns side by side */
+.column {
+  float: left;
+  width: 50%;
+  padding: 0 5px;
+}
+
+.row {margin: 0 -5px;}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive columns */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+    display: block;
+    margin-bottom: 10px;
+  }
+}
+
+/* Style the counter cards */
+.card {
+  padding: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 900px;
+  margin: auto;
+  text-align: center;
+}
