--- a/FlightCast/templates/index.html
+++ b/FlightCast/templates/index.html
@@ -48,14 +48,14 @@
   <div class="airplane-flex-container">
     <div class="airplane-box-1">
       <h1>Welcome to Flightcast</h1><br>
-      <p class= "begin-font"> Flightcast is your optimal place to obtain data on any airline or flight. It is a one stop location comparison site for you to determine which airline would have you to your final destination in the optimal time and with minimal delays. </p>
+      <p class= "begin-font">Flightcast is your optimal place to obtain data on any airline or flight. It is a one stop location comparison site for you to determine which airline would have you to your final destination in the optimal time and with minimal delays. </p>
 
-      <p class="begin-font"> We have pulled API data from AllAirports JSON into a sqlite database to populate a table of all airport origins and destinations within the United States.</p><br>
+      <p class="begin-font">We have pulled API data from AllAirports JSON into a sqlite database to populate a table of all airport origins and destinations within the United States.</p><br>
       
       
     
     <form>
-       <input class="submit-Button" type="button" value="Flight Search" onclick="window.location.href='https//:flightsearch.html'" />
+       <input class="submit-Button" type="button" value="Flight Search" onclick="window.location.href='/flightsearch'" />
     </form>
     
 
@@ -65,10 +65,10 @@
   <div class="column">
     <div class="card">
     <img src="/static/images/flight.jpg" alt="flight">
-      <h2 class="font-header"> FIND YOUR ROUTE</h2><br>
-        <p> Choose your origin and destination</p><br>
-        <p> Select your optimal date for travel</p><br>
-        <p> HIT THE FLY AWAY BUTTON </p> 
+      <h2 class="font-header">FIND YOUR ROUTE</h2><br>
+      <p>Choose your origin and destination</p><br>
+      <p>Select your optimal date for travel</p><br>
+      <p>Submit</p> 
     </div>
   </div>
 
@@ -76,12 +76,10 @@
     <div class="card">
      <img src="/static/images/worldsearch.png" alt="worldsearch">
       <h2 class="font-header">SEARCH</h2><br>
-          
-        <p> shortest flight path</p>
-        <p> graphical data</p>
-        <p> on-time performance</p>
-        <p> determine which fpght is best for you</p>
-          
+      <p>Shortest flight path</p>
+      <p>Graphical data</p>
+      <p>On-time performance</p>
+      <p>Determine which flight is best for you</p>
     </div>
   </div>  
     
