--- a/FlightCast/templates/flightsearch.html
+++ b/FlightCast/templates/flightsearch.html
@@ -10,11 +10,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script type="text/javascript">
       var obj = [];
+      var obj2 = [];
     </script>
   </head>
   <body>
-    <!-- The div that holds our map-->
-  <div id=""></div>
 
   <!--D3-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.5.0/d3.min.js"></script>
@@ -50,25 +49,26 @@
   <div class="container-fluid-body">
     <div class="row">
       <div class="col-sm-3 col-md-6 col-lg-4 bg-success">
-      <form action="/action_page.php">
-        <div class="form-group">
-          <label for="origin">Origin</label>
-          <input type="text" class="form-control" id="origin" name="origin">
-        </div>
-        <div class="form-group">
-          <label for="des">Destination</label>
-          <input type="destination" class="form-control" id="des" name="destination">
-        </div>
-        <div class="form-group">
-            <div>
-                <span class="glyphicon glyphicon-calendar"></span> Calendar
-                  <input id="date" type="date" class="form-control" name="Date" placeholder="Date" name="trip"
-                             value="2018-07-22"
-                             min="2018-01-01" max="2018-12-31" />
-                  </div>
-        </div>
-        <button type="submit" class="btn btn-primary">FLY AWAY</button>
-      </form>  
+          <form autocomplete="off" action="/send">
+            <div class="autocomplete" style="width:500px;">
+                <input id="Origin" type="text" name="Origin" placeholder="Origin">
+            </div>
+            <br><br>
+            <div class="autocomplete" style="width:500px;">
+                <input id="Destination" type="text" name="Destination" placeholder="Destination">
+            </div>
+            <br>
+            <div class="input-group">
+              <span class="glyphicon glyphicon-calendar"></span> Calendar
+              <input id="date" type="date" class="form-control" name="Date" placeholder="Date" name="trip"
+                       value="2018-07-22" min="2018-01-01" max="2018-12-31" />
+                       <div class="input-group-addon">
+                          <span class="glyphicon glyphicon-th"></span>
+                      </div>
+            </div>
+            <input class="submit-Button" type="button" value="SUBMIT">
+            
+        </form>
       </div>
       <div class="col-sm-9 col-md-6 col-lg-8">
         <table style="background-color: #ffffff;" class="table table-hover table-striped">
@@ -86,6 +86,7 @@
     <script type="text/javascript">
         var flightdata = '{{ flightdata | tojson | safe }}';
         obj = JSON.parse(flightdata);
+        
     </script>
     <script src="/static/scripts/flightseach.js"></script>
   </body>
